--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <!-- <script src="https://cdn.tailwindcss.com?plugins=typography,forms,aspect-ratio"></script> -->
+    <script src="https://cdn.tailwindcss.com?plugins=typography,forms,aspect-ratio"></script>
   </head>
   <body class="text-white bg-background">
     <div id="root"></div>
